--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,16 @@
   font-family: 'Oswald' !important;
 }
 
+table,
+th,
+td {
+  font-family: 'Open Sans' !important;
+}
+
+th {
+  font-weight: 600 !important;
+}
+
 p a {
   color: #000087 !important;
   font-family: 'Open Sans' !important
